<resources>
    <string name="app_name">GMAF Config Scanner</string>
    <string name="action_new">New Process Flow</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add">add QR-Code</string>
    <string name="content_description_favorite">add QR-Code</string>
    <string name="dialog_import_process_flow_title">Import Process Flow</string>
    <string name="dialog_new_process_flow_title">New Process Flow</string>
    <string name="dialog_new_process_flow_message">Unsaved changes will be deleted!</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="tab_text_1">Definitions</string>
    <string name="tab_text_2">Configuration</string>

    <string name="title_activity_tabbed">TabbedActivity</string>

    <string name="section_plugins">Plugins</string>
    <string name="section_fusions">Fusions</string>
    <string name="section_exporters">Exporters</string>
    <string name="section_resources">Resources</string>
    <string name="title_activity_definition_detail_host">DefinitionDetailHostActivity</string>
    <string name="title_definition_list">Items</string>
    <string name="title_definition_detail">Definition Detail</string>
    <string name="parameter_name">Param</string>
    <string name="add_parameter">Parameter</string>
    <string name="add_flow_source">Flow-Source</string>
    <string name="add_fusion">Fusion</string>
    <string name="add_mmfg">MMFG</string>
    <string name="add_export">Export</string>
    <string name="create_configuration_element">Create Configuration Element</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="value">value</string>
    <string name="processor">Processor</string>
    <string name="select_processors">Select Processors:</string>
    <string name="target">Target</string>
    <string name="exporter">Exporter</string>
    <string name="parameter">Parameter</string>
    <string name="flow_source">Flow-Source</string>
    <string name="delete">delete</string>
    <string name="dialog_delete_confirmation_message">This action cannot be reverted!</string>
    <string name="select_file">Select File:</string>
    <string name="fusion">Fusion</string>
    <string name="mmfg">MMFG</string>
    <string name="export">Export</string>
    <string name="type">Type:</string>
    <string name="location">Location:</string>
    <string name="clazz">Class:</string>
    <string name="extension">Extension</string>
    <string name="is_general">IsGeneral</string>
    <string name="action_edit">Edit Process Flow</string>
    <string name="new_process_flow">New</string>
    <string name="title_edit_process_flow">Edit Process Flow</string>
    <string name="action_share">Share</string>
</resources>